	Edited file /modules/Timetable/tt_view.php

General: added interface for parents to upload a profile image
	Edited file /index.php
	New files /index_parentPhotoDeleteProcess.php, index_parentPhotoUploadProcess.php
	Edited file /modules/Students/student_view_details.php
	
General: fixed redirect error if session times out and user uses student/staff fast finder
	Edited file /indexFindRedirect.php
	

v8.0.03
-------
General: improved theme-ability
	Edited file /themes/Default/css/main.css
	Edited file /themes/Olden/css/main.css
	Edited various module files

v8.0.02
-------
Installer: fixed PHP shortcode which stopped installation in some environments
	Edited file /installer/install.php

v8.0.01
-------
General: fixed intermittent login notice issue
	Edited login.php

Planner: fixed PHP notice issue in unit edit
	Edited file /modules/Planner/units_editProcess.php

Planner: improved unit dump to show lessons in all classes
	Edited file /modules/Planner/units_dump.php

General: fixed cutting edge update code to work between versions (within versions seemed to be working fine)
	Edited files /modules/System Admin/update*.php

User Admin: fixed blank string translation issue
	Edited file /modules/User Admin/user_manage.php

Resources: regular user search issue fixed
	Edited file /modules/Resources/resources_manage.php

General: improved top menu so Other category appears last
	Edited file /functions.php

Markbook: potential SQL-injection security fix
	Edited files /modules/Markbook/markbook_view.php
	Edited files /modules/Students/student_view_details.php

General: potential SQL-injection security fixes
	Edited file /modules/Timetable Admin/tt_import.php
	Edited files /modules/Planner/plannerProcess.php, planner_view_full.php
	Edited file /index.php

v8.0.00
-------
User Admin: exposed hidden-by-default Manage Districts setting
	New values in table gibbonPermission
	
Database: fixed issue leading to some tables becoming InnoDB instead of MyISAM