@@ -987,7 +987,7 @@ div.ui-datepicker-header {
 
 td.hiddenReveal, div.hiddenReveal {
 	background: none; 
-	background-color: #333;
+	background-color: #EDF7FF;
 }
 
 /* Timetable styles */
