@@ -29,7 +29,12 @@ General: added interface for parents to upload a profile image
 	
 General: fixed redirect error if session times out and user uses student/staff fast finder
 	Edited file /indexFindRedirect.php
-	
+
+Students: improved interface string consistency
+	Edited file /modules/Students/student_view_details.php
+
+Markbook: minor theme-ability tweaks
+	Edited file /modules/Markbook/markbook_view.php
 
 v8.0.03
 -------
